@@ -56,7 +56,8 @@
         can call later using Embedded PERL. These functions create a
         <firstterm>manual chain</firstterm> using
         Shorewall::Chains::new_manual_chain() and populate it with rules using
-        Shorewall::Chains::add_rule().</para>
+        Shorewall::Chains::add_rule(). The name passed to new_manual_chain()
+        must not be longer than 29 characters.</para>
       </listitem>
 
       <listitem>
