@@ -73,7 +73,8 @@
                 chain specified in the CHAIN column. If <emphasis
                 role="bold">:COUNT</emphasis> is included, a counting rule
                 matching this entry will be added to
-                <emphasis>chain</emphasis></para>
+                <emphasis>chain</emphasis>. The <emphasis>chain</emphasis> may
+                not exceed 29 characters in length.</para>
               </listitem>
             </varlistentry>
 
@@ -111,7 +112,8 @@
           role="bold">accounting</emphasis> chain is assumed. This is the
           chain where the accounting rule is added. The
           <emphasis>chain</emphasis> will be created if it doesn't already
-          exist.</para>
+          exist. The <emphasis>chain</emphasis> may not exceed 29 characters
+          in length.</para>
         </listitem>
       </varlistentry>
 
