@@ -16,7 +16,10 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
 
 RC 1
 
-None.
+1)  Previously, Shorewall did not check the length of the names of
+    accounting chains and manual chains. This could result in 
+    errors when loading the resulting ruleset. Now, the compiler issues
+    an error for chain names longer than 29 characters.
 
 Beta 3
 
