@@ -2,6 +2,8 @@ Changes in Shorewall 4.4.17 RC 1
 
 1)  Documentation and release notes cleanup.
 
+2)  Ensure that manual and accounting chains aren't too long.
+
 Changes in Shorewall 4.4.17 Beta 3
 
 1)  Allow run-time address variables in the masq file.
